--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 											<ul class="nav nav-pills" id="mainNav">
 												<li><a href="index.html" class="nav-link active">Home</a></li>
 												<li><a href="introduction.html" class="nav-link">税理士紹介</a></li>
-												<li><a href="service.html" class="nav-link">業務案内</a></li>
+												<li><a href="service.html" class="nav-link">サービス</a></li>
 												<li><a href="price.html" class="nav-link">料金案内</a></li>
 												<li><a href="news.html" class="nav-link">お知らせ</a></li>
 												<li><a href="contact.html" class="nav-link">お問い合わせ</a></li>
@@ -123,25 +123,24 @@
 				<div class="container-fluid px-0 mb-5">
 					<div class="row">
 						<div
-							class="col-sm-9 col-md-6 col-lg-4 text-center text-sm-end z-index-0 px-5 px-sm-0 mt-5 mt-sm-0 pt-4 pt-sm-0">
-							<div class="position-relative top-text-contents p-5">
-								<div class="spacer my-5 py-2 d-none d-sm-block"></div>
-								<div class="overflow-hidden pt-sm-5 mt-sm-5">
+							class="col-md-5 col-lg-6 text-center text-sm-end z-index-0 px-5 px-md-0 mt-5 mt-md-0 pt-4 pt-md-0">
+							<div class="position-relative top-text-contents">
+								<div class="spacer my-5 py-2 d-none d-md-block"></div>
+								<div class="overflow-hidden pt-3 pt-md-5 mt-3 mt-md-5">
 									<h1 class="font-weight-extra-bold text-13 mb-3 text-left appear-animation" data-appear-animation="maskUp"
 										data-appear-animation-delay="300"><span style="color: #CD65FF;">想</span>いを形に</h1>
 								</div>
-								<div class="overflow-hidden mb-3">
+								<div class="overflow-hidden mb-5">
 									<h2 class="font-weight-semibold text-10 line-height-2 mb-0 appear-animation"
 										data-appear-animation="maskUp" data-appear-animation-delay="500">未来を共に<span style="color: #6666FF;">創</span>ります
 									</h2>
 								</div>
 								<p class="custom-font-size-1 text-left appear-animation" data-appear-animation="fadeInUpShorter"
 									data-appear-animation-delay="700">
-									❖　税理士が全ての業務に対応<br>
-									❖　電子帳簿保存法に則したデジタル化を促進<br>
-									❖　海外取引の税務・非居住者の税務に対応<br>
-									❖　クラウド会計導入支援<br>
-									❖　法人設立支援
+									デジタル化・国際税務に強い税理士事務所です。<br>
+									サービス業出身の女性税理士が対応します。<br>
+									お客様目線での、丁寧なサポートを心掛けています。<br>
+									オンラインなら全国対応可能です。
 									</p>
 								<div class="custom-hero-sub-images-style-1 text-start">
 									<div class="custom-hero-sub-images-shadow"></div>
@@ -151,7 +150,7 @@
 								<div class="spacer py-2"></div>
 							</div>
 						</div>
-						<div class="col-sm-3 col-md-6 col-lg-8 text-center text-sm-end z-index-0 px-5 px-sm-0 mt-5 mt-sm-0 pt-4 pt-sm-0">
+						<div class="col-md-7 col-lg-6 text-center text-sm-end z-index-0 px-5 px-md-0 mt-5 mt-md-0 pt-4 pt-md-0">
 							<img class="fv-img appear-animation" src="./img/fv/top001.jpg" alt=""
 							data-appear-animation="fadeInLeftShorter">
 						</div>
@@ -160,11 +159,11 @@
 				</div>
 			</section>
 
-			<!-- 私たちについて -->
+			<!-- 税理士紹介 -->
 			<div class="container py-4 my-5">
-				<div class="row">
+				<div class="row align-items-center">
 					<div class="col-lg-4">
-						<div class="overflow-hidden mb-2">
+						<div class="overflow-hidden mb-1">
 							<h2 class="font-weight-bold text-10 line-height-2 mb-0 appear-animation" data-appear-animation="maskUp"
 								data-appear-animation-delay="200">税理士紹介</h2>
 						</div>
@@ -172,19 +171,23 @@
 							<h3 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0 appear-animation"
 								data-appear-animation="maskUp" data-appear-animation-delay="400">About us</h3>
 						</div>
+						<div class="top-section-img">
+							<img class="img-fluid appear-animation" src="./img/team/profile.jpg" alt=""
+							data-appear-animation="maskUp" data-appear-animation-delay="400">
+						</div>
 						<!-- <p class="custom-font-secondary custom-font-size-1 line-height-7 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet libero id nisi euismod, sed porta est consectetur.</p> -->
 					</div>
 					<div class="col-lg-8">
-						<p class="pt-3 pb-1 mb-2 appear-animation" data-appear-animation="fadeInUpShorter"
+						<p class="pt-3 pt-lg-5 pb-1 mb-2 appear-animation" data-appear-animation="fadeInUpShorter"
 							data-appear-animation-delay="450">
-							根拠法令の検討などプロフェッショナルとしての責務を果たしつつも、
-							話しやすいオープンな雰囲気を大切にすること、分かりやすい言葉で説明することを心掛けています。<br>
-							お気軽にご相談ください。
+							筑波大学大学院卒業。<br>
+							転勤が難しくなったことをきっかけに株式会社ニトリから税理士業界へ転職。試験に合格し、都内事務所及びデロイトトーマツ税理士法人にて個人・法人の税務申告・コンサルティングに従事したのち、2023年独立。<br>
+							節税・デジタル化・会社設立だけでなく、国際税務のアドバイスを得意としています。
 						</p>
 						<a href="introduction.html"
 							class="custom-read-more btn btn-link d-inline-flex align-items-center font-weight-semibold text-decoration-none ps-0 appear-animation"
 							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">
-							READ MORE
+							詳しくはこちら
 							<svg class="ms-2" version="1.1" viewBox="0 0 15.698 8.706" width="17" xml:space="preserve"
 								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 								<polygon stroke="#FFF" stroke-width="0.1" fill="#FFF"
@@ -195,7 +198,7 @@
 				</div>
 			</div>
 
-			<!-- 業務内容 -->
+			<!-- サービス -->
 			<div class="container pt-2">
 				<div class="container position-relative z-index-3 mt-3 mb-5">
 					<div class="row align-items-center justify-content-center">
@@ -206,19 +209,19 @@
 						</div>
 						<div class="col-lg-6 appear-animation" data-appear-animation="fadeInRightShorter"
 							data-appear-animation-delay="500">
-							<h2 class="font-weight-bold text-transform-none text-10 line-height-2 mb-1">業務内容</h2>
+							<h2 class="font-weight-bold text-transform-none text-10 line-height-2 mb-1">サービス</h2>
 							<h3 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-3">Our Service</h3>
-							<p class="custom-font-secondary custom-font-size-3 line-height-7 pb-2 mb-4">自社では様々なことがご相談可能です。お気軽にご相談ください。
-							</p>
+							<!-- <p class="custom-font-secondary custom-font-size-3 line-height-7 pb-2 mb-4">自社では様々なことがご相談可能です。お気軽にご相談ください。
+							</p> -->
 							<ul class="list list-icons list-icons-style-2 list-icons-lg custom-list-icons-icon-size pb-1 mb-3">
+								<li class="font-weight-semibold text-color-dark">
+									<i class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> ビジネスプラン<br>顧問契約のプランです。</li>
 								<li class="font-weight-semibold text-color-dark"><i
-										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 創業支援</li>
+										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> パーソナルプラン<br>年に１回、確定申告のみ関与するプランです。
+										</li>
 								<li class="font-weight-semibold text-color-dark"><i
-										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 税務顧問</li>
-								<li class="font-weight-semibold text-color-dark"><i
-										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 記帳代行</li>
-								<li class="font-weight-semibold text-color-dark"><i
-										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 各種申告</li>
+										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> スポット相談<br>必要なときに、単発で相談できるサービスです。
+										</li>
 							</ul>
 							<a href="service.html"
 								class="custom-read-more btn btn-link d-inline-flex align-items-center font-weight-semibold text-decoration-none ps-0">
@@ -250,21 +253,61 @@
 				</div>
 
 				<div class="row justify-content-center py-4 my-5">
-					<div class="col-lg-8 text-center">
+					<div class="col-lg-9 text-center">
 						<div class="overflow-hidden">
 							<h2 class="font-weight-bold text-transform-none text-10 line-height-2 mb-1 appear-animation"
-								data-appear-animation="maskUp" data-appear-animation-delay="200">料金案内</h2>
+								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">料金案内</h2>
 						</div>
 						<div class="overflow-hidden mb-3">
 							<h3 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0 appear-animation"
-								data-appear-animation="maskUp" data-appear-animation-delay="400">Price</h3>
+								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Price</h3>
 						</div>
-						<p class="custom-font-secondary custom-font-size-3 line-height-7 mb-0 appear-animation"
-							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">準備中...
-						</p>
+						<div class="row mb-4">
+							<div class="col-4 appear-animation"
+							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
+								<div class="card card-border card-border-top card-border-hover bg-color-light box-shadow-6 box-shadow-hover anim-hover-translate-top-10px transition-3ms">
+									<div class="card-body">
+										<h4 class="card-title mb-1 text-4 font-weight-bold">ビジネスプラン</h4>
+										<p class="card-text">
+											個人のお客様<br>
+											顧問料　11,000円～<br>
+											決算申告料　66,000円～<br><br>
+											法人のお客様<br>
+											顧問料　27,500円～<br>
+											決算申告料　165,000円～
+											</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-4 appear-animation"
+							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700">
+								<div class="card card-border card-border-top card-border-hover bg-color-light box-shadow-6 box-shadow-hover anim-hover-translate-top-10px transition-3ms">
+									<div class="card-body">
+										<h4 class="card-title mb-1 text-4 font-weight-bold">パーソナルプラン</h4>
+										<p class="card-text">
+											個人のお客様　11,000円～<br><br>
+											帳簿の状況や申告内容等を確認して、個別にお見積りいたします。<br><br><br>
+											</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-4 appear-animation"
+							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">
+								<div class="card card-border card-border-top card-border-hover bg-color-light box-shadow-6 box-shadow-hover anim-hover-translate-top-10px transition-3ms">
+									<div class="card-body">
+										<h4 class="card-title mb-1 text-4 font-weight-bold">オンライン相談</h4>
+										<p class="card-text">
+											30分　5,500円～<br><br>
+											顧問契約までは必要ないけれど、単発で税理士に相談したい方に向けたプランです。<br>
+											オンラインで全国対応いたします。
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
 						<a href="price.html"
 							class="custom-read-more btn btn-link d-inline-flex align-items-center font-weight-semibold text-decoration-none ps-0 appear-animation"
-							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">
+							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="850">
 							READ MORE
 							<svg class="ms-2" version="1.1" viewBox="0 0 15.698 8.706" width="17" xml:space="preserve"
 								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -295,8 +338,8 @@
 										<h3 class="text-transform-none font-weight-bold custom-font-size-1 pb-1 mb-2">住所</h3>
 										<div class="d-flex flex-column flex-md-row">
 											<ul class="list list-unstyled pe-5 mb-md-0">
-												<li class="mb-0">〒123-4567</li>
-												<li class="mb-0">東京都xx区xx1-2-34</li>
+												<li class="mb-0">〒135-0062</li>
+												<li class="mb-0">東京都江東区東雲1-9-4-902</li>
 											</ul>
 										</div>
 									</div>
@@ -315,25 +358,7 @@
 										<h3 class="text-transform-none font-weight-bold custom-font-size-1 pb-1 mb-2">メールアドレス</h3>
 										<ul class="list list-unstyled pe-5 mb-0">
 											<li class="mb-0"><a href="mailto:email@domain.com"
-													class="text-color-default text-color-hover-primary text-decoration-none">info@exsample.com</a>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col">
-								<div class="feature-box feature-box-style-5">
-									<div class="feature-box-icon">
-										<img class="icon-animated" width="42" src="img/demos/industry-factory/icons/icon-phone.svg" alt=""
-											data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
-									</div>
-									<div class="feature-box-info">
-										<h3 class="text-transform-none font-weight-bold custom-font-size-1 pb-1 mb-2">Phone Number</h3>
-										<ul class="list list-unstyled pe-5 mb-0">
-											<li class="mb-0"><a href="tel:+1234567890"
-													class="text-color-default text-color-hover-primary text-decoration-none">(800) 123-4567</a>
+													class="text-color-default text-color-hover-primary text-decoration-none">info@skrtax.com</a>
 											</li>
 										</ul>
 									</div>
@@ -343,7 +368,7 @@
 					</div>
 					<div class="col-lg-6 mb-5 mb-lg-0">
 						<div class="access-img">
-							<img src="./img/access.jpg" alt="" class="img-fluid box-shadow-3 appear-animation"
+							<img src="./img/access.jpg" alt="" class="img-fluid box-shadow-3 appear-animation d-none d-md-block"
 								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
 						</div>
 					</div>
@@ -361,26 +386,23 @@
 			</div>
 			<div class="container pt-lg-5 mt-5">
 				<div class="row">
-					<div class="col-lg-3 mb-5 mb-lg-0">
+					<div class="col-lg-3 mb-4 mb-lg-0">
 						<!-- <a href="index.html">
 							<img src="img/demos/industry-factory/logo-light.png" class="img-fluid mt-5 mb-4"
 								alt="Demo Industry & Factory" />
 						</a> -->
 						<h4 class="text-color-light font-weght-bold text-5 positive-ls-2">さくら純税理士事務所</h4>
 						<p>
-							〒123-4567<br>
-							東京都xx区xx1-2-34
+							〒135-0062<br>
+							東京都江東区東雲1-9-4-902<br>
+							税理士　山口純
 						</p>
 						<ul class="social-icons social-icons-medium">
-							<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i
-										class="fab fa-facebook-f"></i></a></li>
-							<li class="social-icons-twitter mx-2"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i
-										class="fab fa-twitter"></i></a></li>
 							<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 									title="Instagram"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-lg-4 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-4 offset-lg-1 mb-4 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">PAGE MENU</h4>
 						<div class="row">
 							<div class="col-md-6">
@@ -400,14 +422,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-3 offset-lg-1 mb-3 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">CONTACT</h4>
-						<p>TEL：000-123-4567<br>
-							MAIL：info@example.com</p>
+						<p>MAIL：info@skrtax.com</p>
 					</div>
 				</div>
 			</div>
-			<div class="footer-copyright custom-bg-lighten-grey-1 mt-5 pb-5">
+			<div class="footer-copyright custom-bg-lighten-grey-1 mt-lg-5 pb-5">
 				<div class="container custom-footer-top-light-border pt-4">
 					<div class="row">
 						<div class="col">
