--- a/introduction.html
+++ b/introduction.html
@@ -127,56 +127,44 @@
 						<img src="img/team/profile.jpg" class="img-fluid mb-2" alt="">
 					</div>
 					<div class="col-md-5 order-2">
-						<div class="profile-img-inner appear-animation" data-appear-animation="maskUp">
-							<img class="profile-img" src="img/team/profile_top.jpg" alt="">
-						</div>
 						<div class="overflow-hidden">
-							<h3 class="text-color-dark font-weight-bold mb-4 pt-1 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="300">代表税理士</h3>
-							<h2 class="text-color-dark font-weight-bold text-12 mb-2 pt-0 mt-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="300">山口　純</h2>
-							<h4 class="text-color-dark font-weight-bold mb-2 pt-0 mt-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="300">JUN YAMAGUCHI</h4>
+							<h3 class="text-color-dark font-weight-semibold mb-4 pt-1 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="300">代表税理士</h3>
+							<h2 class="text-color-dark font-weight-semibold text-12 mb-2 pt-0 mt-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="300">山口　純</h2>
+							<h4 class="text-color-dark font-weight-semibold mb-2 pt-0 mt-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="300">JUN YAMAGUCHI</h4>
 						</div>
 						<div class="overflow-hidden mb-3">
-							<p class="font-weight-bold text-uppercase mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="500">（税理士番号　148046）</p>
+							<p class="font-weight-semibold text-uppercase mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="500">（税理士番号　148046）</p>
+						</div>
+						<div class="overflow-hidden mb-3">
+							<p class="font-weight-nomal mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="600">
+								筑波大学大学院卒業。<br>
+								転勤が難しくなったことをきっかけに株式会社ニトリから税理士業界へ転職。試験に合格し、都内事務所及びデロイトトーマツ税理士法人にて個人・法人の税務申告・コンサルティングに従事したのち、2023年独立。<br>
+								節税・デジタル化・会社設立だけでなく、国際税務のアドバイスを得意としている。
+							</p>
 						</div>
 					</div>
 				</div>
 
 				<div class="row mb-2">
-					<div class="col-12 mb-5">
+					<div class="col-12 mb-5 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="700">
 						<h2 class="font-weight-bold mb-4">ご挨拶</h2>
 						<p class="profile-text">
 							はじめまして。代表税理士の山口純（やまぐちじゅん）と申します。<br><br>
-							私は大学卒業後は、税務とは全く異なる仕事をしていました。<br>
-							新卒では株式会社ニトリに就職し、店舗運営に奔走する日々でしたが
-							社会にでて初めて、「自分がお金や社会の制度を知らないこと」を痛感したんですね。<br><br>
-							私たちは色々な形で税金を納めているし、自分で計算しなければならない場合もあります。<br>
-							また、条件を満たせば受けられる社会保障や補助金制度なども日本にはたくさんあります。<br>
-							しかし、多くの人はこのような法や制度についてほとんど学ぶことなく社会に出ます。<br>
-							そして、「知らない」ゆえに損をすることも多いです。<br><br>
-							税金や会計について調べていたところ、全国転勤が難しくなったことをきっかけに、
-							それならばいっそ税理士になろうと思い、2015年から税理士業界へ転職し資格を取得しました。<br>
-							知りたいことを学ぶことで手に職を持てる上、どこに住むことになっても仕事ができると思ったんです。<br><br>
-							都内の税理士事務所で個人事業主・中小法人を中心とした業務経験を重ねたのち、
-							日本最大手のグローバルファームであるデロイトトーマツ税理士法人にて勤務し、
-							プライム市場企業の税務申告や組織再編、インバウンドを中心とした国際税務に従事してきました。<br><br>
+							私は大学卒業後は、大手の家具会社に就職し、税務とは異なる仕事をしていました。<br>
+							社会人になり実感したことは、自分はこれまで税金や社会制度について学ぶ機会がほとんどなかったということと、
+							お金にまつわる知識は自分や周りの人を助けることができるということです。<br><br>
+							その思いから会計の勉強をしていたところ、全国転勤が難しくなったことをきっかけに、それならばいっそ税理士になろうと決意し、
+							2015年に税理士業界へ転職、資格を取得しました。<br><br>
+							都内の税理士事務所で個人事業主・中小法人を中心とした業務経験を重ねたのち、日本最大手のグローバルファームである
+							デロイトトーマツ税理士法人にて勤務し、プライム市場企業の税務申告や組織再編、インバウンドを中心とした国際税務に従事してきました。<br><br>
+							結婚や妊娠といったライフイベントで働き方にも再び転機が訪れ、どのような50代を、40代を、30代を過ごしたいのかを考えたところ、
+							人生100年というけれども、自分自身の仕事をつくれる期間というのは実はそう長くないのではないか、
+							育児をしながらでも挑戦のスタートを切ることはできるのではないかとの思いに至り、
 							2023年、さくら純税理士事務所を開業しました。<br><br>
-							自分の経験から、「税法や制度は、よく分からない」のが普通なのだと考えています。<br>
-							根拠法令の検討などプロフェッショナルとしての責務を果たしつつも、
-							話しやすいオープンな雰囲気を大切にすること、分かりやすい言葉で説明することを心掛けています。<br>
-							お気軽にご相談ください。
-						</p>
-					</div>
-					<div class="col-12">
-						<h2 class="font-weight-bold mb-4">事務所の強み</h2>
-						<p class="profile-text">
-							♢　税理士が全ての業務に対応<br>
-							♢　電子帳簿保存法に則したデジタル化<br>
-							♢　クラウド会計導入支援<br>
-							♢　インボイス導入支援<br>
-							♢　海外との取引にかかる税務<br>
-							♢　非居住者の税務<br>
-							♢　法人設立支援<br>
-							♢　消費税還付申告
+							自身がそうだったこともあり、「税法や制度はよくわからない」のは当たり前だと思っています。<br>
+							根拠条文の検討などプロフェッショナルとしての責務を果たしつつも、話しやすい雰囲気を大切にすることや、分かりやすく説明することを心掛けています。<br><br>
+							皆様のビジネスにかける想いを形にするため、培ってきた知識や経験で周りの人の力になりたいという初心を胸に、できる限りのサポートをしていきます。<br>
+							どうぞお気軽にお問合せください。
 						</p>
 					</div>
 				</div>
@@ -194,26 +182,23 @@
 			</div>
 			<div class="container pt-lg-5 mt-5">
 				<div class="row">
-					<div class="col-lg-3 mb-5 mb-lg-0">
+					<div class="col-lg-3 mb-4 mb-lg-0">
 						<!-- <a href="index.html">
 							<img src="img/demos/industry-factory/logo-light.png" class="img-fluid mt-5 mb-4"
 								alt="Demo Industry & Factory" />
 						</a> -->
 						<h4 class="text-color-light font-weght-bold text-5 positive-ls-2">さくら純税理士事務所</h4>
 						<p>
-							〒123-4567<br>
-							東京都xx区xx1-2-34
+							〒135-0062<br>
+							東京都江東区東雲1-9-4-902<br>
+							税理士　山口純
 						</p>
 						<ul class="social-icons social-icons-medium">
-							<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i
-										class="fab fa-facebook-f"></i></a></li>
-							<li class="social-icons-twitter mx-2"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i
-										class="fab fa-twitter"></i></a></li>
 							<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 									title="Instagram"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-lg-4 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-4 offset-lg-1 mb-4 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">PAGE MENU</h4>
 						<div class="row">
 							<div class="col-md-6">
@@ -233,14 +218,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-3 offset-lg-1 mb-3 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">CONTACT</h4>
-						<p>TEL：000-123-4567<br>
-							MAIL：info@example.com</p>
+						<p>MAIL：info@skrtax.com</p>
 					</div>
 				</div>
 			</div>
-			<div class="footer-copyright custom-bg-lighten-grey-1 mt-5 pb-5">
+			<div class="footer-copyright custom-bg-lighten-grey-1 mt-lg-5 pb-5">
 				<div class="container custom-footer-top-light-border pt-4">
 					<div class="row">
 						<div class="col">
