--- a/news.html
+++ b/news.html
@@ -132,7 +132,7 @@
 					</div> -->
 					<div class="news-list-item appear-animation" data-appear-animation="fadeInUp">
 						<a href="" class="news-list-link"></a>
-						<p class="news-date">2023.11.01</p>
+						<p class="news-date">2023.12.18</p>
 						<p class="news-title">ホームページを公開しました</p>
 						<p class="news-text">公式ホームページを開設しました。</p>
 					</div>
@@ -150,26 +150,23 @@
 			</div>
 			<div class="container pt-lg-5 mt-5">
 				<div class="row">
-					<div class="col-lg-3 mb-5 mb-lg-0">
+					<div class="col-lg-3 mb-4 mb-lg-0">
 						<!-- <a href="index.html">
 							<img src="img/demos/industry-factory/logo-light.png" class="img-fluid mt-5 mb-4"
 								alt="Demo Industry & Factory" />
 						</a> -->
 						<h4 class="text-color-light font-weght-bold text-5 positive-ls-2">さくら純税理士事務所</h4>
 						<p>
-							〒123-4567<br>
-							東京都xx区xx1-2-34
+							〒135-0062<br>
+							東京都江東区東雲1-9-4-902<br>
+							税理士　山口純
 						</p>
 						<ul class="social-icons social-icons-medium">
-							<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i
-										class="fab fa-facebook-f"></i></a></li>
-							<li class="social-icons-twitter mx-2"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i
-										class="fab fa-twitter"></i></a></li>
 							<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 									title="Instagram"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-lg-4 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-4 offset-lg-1 mb-4 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">PAGE MENU</h4>
 						<div class="row">
 							<div class="col-md-6">
@@ -189,14 +186,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-3 offset-lg-1 mb-3 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">CONTACT</h4>
-						<p>TEL：000-123-4567<br>
-							MAIL：info@example.com</p>
+						<p>MAIL：info@skrtax.com</p>
 					</div>
 				</div>
 			</div>
-			<div class="footer-copyright custom-bg-lighten-grey-1 mt-5 pb-5">
+			<div class="footer-copyright custom-bg-lighten-grey-1 mt-lg-5 pb-5">
 				<div class="container custom-footer-top-light-border pt-4">
 					<div class="row">
 						<div class="col">
