--- a/price.html
+++ b/price.html
@@ -120,32 +120,384 @@
 				</div>
 			</section>
 
-			<!-- <section class="my-5">
-				<div class="container py-2 my-5">
-					<h3>料金案内</h3>
-					<h6>説明などなど。</h6>
-					<p>本文。以下ダミーテキスト<br>
-						「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-						カムパネルラが手をあげました。
-						それから四、五人手をあげました。
-						ジョバンニも手をあげようとして、急いでそのままやめました。
-						たしかにあれがみんな星だと、いつか雑誌で読んだのでしたが、このごろはジョバンニはまるで毎日教室でもねむく、本を読むひまも読む本もないので、なんだかどんなこともよくわからないという気持ちがするのでした。
-						ところが先生は早くもそれを見つけたのでした。
-						「ジョバンニさん。
-						あなたはわかっているのでしょう」ジョバンニは勢いよく立ちあがりましたが、立ってみるともうはっきりとそれを答えることができないのでした。
-						ザネリが前の席からふりかえって、ジョバンニを見てくすっとわらいました。
-						ジョバンニはもうどぎまぎしてまっ赤になってしまいました。
-						先生がまた言いました。
-						「大きな望遠鏡で銀河をよっく調べると銀河はだいたい何でしょう」やっぱり
-					</p>
-				</div>
-			</section> -->
-
 			<section class="my-5">
-				<div class="container py-5">
-					<p class="text-center text-10">
-						準備中...
-					</p>
+				<div class="container py-2 my-5">
+					<div class="price-contents-wrap">
+						<p class="mb-5">
+							以下は基本となる料金の一覧です（全て税込価格）。<br>
+							無料の初回面談にてヒアリングの上、見積書を提示させていただきます。<br>
+							取引内容等によっては以下と異なる金額で提案させていただくこともございます。ご了承ください。
+						</p>
+						<!-- ビジネスプラン -->
+						<div class="price-contents-plan mb-5">
+							<h3>ビジネスプラン</h3>
+							<p class="mb-3">
+								いつでも相談できる税務顧問のプランです。<br>
+								売上高、事業規模等を指標として料金の設定をしております。
+							</p>
+							<div class="price-contents-item mb-5">
+								<h4>個人のお客様</h4>
+								<table class="table table-bordered mb-3">
+									<thead>
+										<tr>
+											<th rowspan="2">年間売上高</th>
+											<th rowspan="2">顧問料 / 月</th>
+											<th rowspan="2">記帳代行料*</th>
+											<th rowspan="2">決算申告料</th>
+											<th colspan="2">年間合計</th>
+										</tr>
+										<tr>
+											<th>記帳代行なし</th>
+											<th>記帳代行あり</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td class="font-weight-semibold">500万円未満</td>
+											<td>11,000円</td>
+											<td>11,000円</td>
+											<td>66,000円</td>
+											<td>198,000円</td>
+											<td>330,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">500万円以上1,000万円未満</td>
+											<td>22,000円</td>
+											<td>16,500円</td>
+											<td>88,000円</td>
+											<td>352,000円</td>
+											<td>550,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">1,000万円以上 5,000万円未満</td>
+											<td>33,000円</td>
+											<td>16,500円</td>
+											<td>121,000円</td>
+											<td>517,000円</td>
+											<td>715,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">5,000万円以上 １億円未満</td>
+											<td>44,000円</td>
+											<td>16,500円</td>
+											<td>154,000円</td>
+											<td>682,000円</td>
+											<td>880,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">１億円以上 ３億円未満</td>
+											<td>55,000円</td>
+											<td>16,500円</td>
+											<td>187,000円</td>
+											<td>847,000円</td>
+											<td>1,045,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">3億円超</td>
+											<td colspan="5" class="text-center">別途お見積り</td>
+										</tr>
+									</tbody>
+								</table>
+								<p class="mb-3">
+									* 500万円未満の記帳代行料は月50仕訳までの価格です。追加仕訳50ごとに+5,500円の報酬料が発生いたします。<br>
+									* その他の記帳代行料は月100仕訳までの価格です。追加仕訳50ごとに+5,500円の報酬料が発生いたします。<br>
+									決算申告料には所得税申告書のほか、消費税申告書の作成・提出を含んでいます。
+								</p>
+								<p class="mb-0">スポットでの所得税確定申告は
+									<a href="contact.html">こちら</a>
+								</p>
+							</div>
+							<div class="price-contents-item mb-5">
+								<h4>法人のお客様</h4>
+								<h5>1.基本料金</h5>
+								<table class="table table-bordered mb-3">
+									<thead>
+										<tr>
+											<th rowspan="2">年間売上高</th>
+											<th rowspan="2">顧問料 / 月</th>
+											<th rowspan="2">記帳代行料*</th>
+											<th rowspan="2">決算申告料</th>
+											<th colspan="2">年間合計</th>
+										</tr>
+										<tr>
+											<th>記帳代行なし</th>
+											<th>記帳代行あり</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td class="font-weight-semibold">1,000万円未満</td>
+											<td>27,500円</td>
+											<td>16,500円</td>
+											<td>165,000円</td>
+											<td>495,000円</td>
+											<td>693,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">1,000万円以上 5,000万円未満</td>
+											<td>39,600円</td>
+											<td>16,500円</td>
+											<td>237,600円</td>
+											<td>712,800円</td>
+											<td>910,800円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">5,000万円以上 １億円未満</td>
+											<td>60,500円</td>
+											<td>16,500円</td>
+											<td>363,000円</td>
+											<td>1,089,000円</td>
+											<td>1,287,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">１億円以上 ３億円未満</td>
+											<td>77,000円</td>
+											<td>16,500円</td>
+											<td>462,000円</td>
+											<td>1,386,000円</td>
+											<td>1,584,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">3億円超</td>
+											<td colspan="5" class="text-center">別途お見積り</td>
+										</tr>
+									</tbody>
+								</table>
+								<p class="mb-5">
+									*記帳代行料は月100仕訳までの価格です。追加仕訳50ごとに+5,500円の報酬料が発生いたします。<br>
+									・決算申告料には法人税申告書、地方税申告書のほか消費税申告書の作成・提出を含んでいます。<br>
+									・外形標準課税の申告を要する場合には、別途お見積り致します。
+								</p>
+								<h5>2.その他サービス</h5>
+								<table class="table table-bordered table-middle mb-3">
+									<thead>
+										<tr>
+											<th>サービス</th>
+											<th>報酬</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td class="font-weight-semibold">定期訪問（東京23区以外は要相談）</td>
+											<td>15,400円/ 回</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">事業所税の申告料</td>
+											<td>22,000円 / 事業所</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">年末調整・法定調書作成（5人まで）</td>
+											<td>33,000円</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">年末調整　（6人以降・人数に応じてお見積り）</td>
+											<td>～5,500円 / 人</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">税務調査立ち合い</td>
+											<td>55,000円 / 日</td>
+										</tr>
+										<tr>
+											<td class="font-weight-semibold">修正申告／更正の請求</td>
+											<td>別途お見積り</td>
+										</tr>
+									</tbody>
+								</table>
+								<p class="mb-0">税務顧問サービスについては
+									<a href="service.html">こちら</a>
+								</p>
+							</div>
+						</div>
+						<!-- パーソナルプラン -->
+						<div class="price-contents-plan mb-5">
+							<h3>パーソナルプラン</h3>
+							<p class="mb-3">
+								顧問契約を結ばず、年に１回確定申告（所得税・消費税）を行うプランです。
+							</p>
+							<div class="price-contents-item mb-5">
+								<table class="table table-bordered mb-3">
+									<thead>
+										<tr>
+											<th>所得区分</th>
+											<th>基本報酬</th>
+											<th>備考</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>給与所得、雑所得（公的年金等）</td>
+											<td>11,000円</td>
+											<td>RSUを含む場合は別途お見積り</td>
+										</tr>
+										<tr>
+											<td>雑所得（業務）</td>
+											<td>44,000円</td>
+											<td>業務としての雑所得</td>
+										</tr>
+										<tr>
+											<td>不動産所得（青色申告）</td>
+											<td>110,000円</td>
+											<td>5物件超は別途お見積り</td>
+										</tr>
+										<tr>
+											<td>事業所得（青色申告）</td>
+											<td>110,000円</td>
+											<td>医療等、業種によっては別途お見積り </td>
+										</tr>
+										<tr>
+											<td>譲渡所得（総合課税）</td>
+											<td>44,000円</td>
+											<td>1物件につき44,000円</td>
+										</tr>
+										<tr>
+											<td>譲渡所得（分離課税）</td>
+											<td>110,000円</td>
+											<td>共有物件の場合は別途お見積り</td>
+										</tr>
+										<tr>
+											<td>譲渡所得（分離課税かつ措置法特例）</td>
+											<td>165,000円</td>
+											<td>共有物件の場合は別途お見積り</td>
+										</tr>
+										<tr>
+											<td>その他一時所得等</td>
+											<td>11,000円～</td>
+											<td>別途お見積り</td>
+										</tr>
+									</tbody>
+									<thead>
+										<tr>
+											<th>所得控除</th>
+											<th>追加報酬</th>
+											<th>備考</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>医療費控除</td>
+											<td>11,000円</td>
+											<td>領収書30枚超は、10枚ごとに1,650円加算</td>
+										</tr>
+										<tr>
+											<td>寄附金控除</td>
+											<td>11,000円</td>
+											<td>証明書10枚超は、5枚ごとに1,650円加算</td>
+										</tr>
+										<tr>
+											<td>雑損控除</td>
+											<td>55,000円</td>
+											<td> </td>
+										</tr>
+										<tr>
+											<td>生命保険料控除（年調未済・確定申告）</td>
+											<td>5,500円</td>
+											<td>証明書10枚超は、5枚ごとに1,650円加算</td>
+										</tr>
+										<tr>
+											<td>その他所得控除（年調未済・確定申告）</td>
+											<td>5,500円～</td>
+											<td>別途お見積り</td>
+										</tr>
+									</tbody>
+									<thead>
+										<tr>
+											<th>税額控除</th>
+											<th>追加報酬</th>
+											<th>備考</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>配当控除</td>
+											<td>11,000円</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>住宅借入金等特別控除（初年度）</td>
+											<td>22,000円</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>外国税額控除</td>
+											<td>33,000円～</td>
+											<td>別途お見積り</td>
+										</tr>
+										<tr>
+											<td>その他税額控除</td>
+											<td>11,000円～</td>
+											<td>別途お見積り</td>
+										</tr>
+									</tbody>
+									<thead>
+										<tr>
+											<th>その他</th>
+											<th>追加報酬</th>
+											<th>備考</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>各種届出・申請</td>
+											<td>11,000円～</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>電子申告の初期設定（ID取得）</td>
+											<td>11,000円</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>電子申告代行</td>
+											<td>0円</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>消費税申告料</td>
+											<td>33,000円～</td>
+											<td>申告方式によって別途お見積り</td>
+										</tr>
+									</tbody>
+								</table>
+								<p class="mb-0">
+									・上記の料金は確定申告のみで、不動産所得や事業所得の決算整理以外の帳簿作成は含まれません。<br>
+									・申告期限より１ヵ月以内のご依頼の場合は、別途報酬総額の25％を加算させて頂いております。<br>
+									・ご契約時に着手金としてお見積りの30%をお支払頂いております。<br>
+									・帳簿は33,000円～作成を承ることも可能です。（仕訳数に応じて金額が変わります。）ご相談ください。
+								</p>
+							</div>
+						</div>
+						<!-- スポット相談 -->
+						<div class="price-contents-plan mb-5">
+							<h3>スポット相談</h3>
+							<p class="mb-3">
+								顧問契約を結ぶほどではないけれど、単発で税理士に相談したい方向けのサービスです。
+							</p>
+							<div class="price-contents-item mb-5">
+								<table class="table table-bordered table-middle mb-3">
+									<thead>
+										<tr>
+											<th>サービス</th>
+											<th>報酬</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>オンライン相談　30分</td>
+											<td>5,500円</td>
+										</tr>
+									</tbody>
+								</table>
+								<p class="mb-0">
+									・事前にお問合せフォームよりご相談内容をお送りいただきます。<br>
+									・PayPayでのお支払いも可能です。<br>
+									・メールでのご相談も承ります。<br>
+									・内容によっては単発で対応ができない場合や、別料金をご案内させていただく場合がございます。<br>
+									　その場合は事前にお伝えさせていただきますので、あらかじめご了承ください。<br>
+									・現在、相続税・贈与税についての相談は承っておりません。
+								</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 
@@ -160,26 +512,23 @@
 			</div>
 			<div class="container pt-lg-5 mt-5">
 				<div class="row">
-					<div class="col-lg-3 mb-5 mb-lg-0">
+					<div class="col-lg-3 mb-4 mb-lg-0">
 						<!-- <a href="index.html">
 							<img src="img/demos/industry-factory/logo-light.png" class="img-fluid mt-5 mb-4"
 								alt="Demo Industry & Factory" />
 						</a> -->
 						<h4 class="text-color-light font-weght-bold text-5 positive-ls-2">さくら純税理士事務所</h4>
 						<p>
-							〒123-4567<br>
-							東京都xx区xx1-2-34
+							〒135-0062<br>
+							東京都江東区東雲1-9-4-902<br>
+							税理士　山口純
 						</p>
 						<ul class="social-icons social-icons-medium">
-							<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i
-										class="fab fa-facebook-f"></i></a></li>
-							<li class="social-icons-twitter mx-2"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i
-										class="fab fa-twitter"></i></a></li>
 							<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 									title="Instagram"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-lg-4 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-4 offset-lg-1 mb-4 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">PAGE MENU</h4>
 						<div class="row">
 							<div class="col-md-6">
@@ -199,14 +548,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-3 offset-lg-1 mb-3 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">CONTACT</h4>
-						<p>TEL：000-123-4567<br>
-							MAIL：info@example.com</p>
+						<p>MAIL：info@skrtax.com</p>
 					</div>
 				</div>
 			</div>
-			<div class="footer-copyright custom-bg-lighten-grey-1 mt-5 pb-5">
+			<div class="footer-copyright custom-bg-lighten-grey-1 mt-lg-5 pb-5">
 				<div class="container custom-footer-top-light-border pt-4">
 					<div class="row">
 						<div class="col">
