--- a/privacy.html
+++ b/privacy.html
@@ -82,7 +82,7 @@
 											<ul class="nav nav-pills" id="mainNav">
 												<li><a href="index.html" class="nav-link">Home</a></li>
 												<li><a href="introduction.html" class="nav-link">税理士紹介</a></li>
-												<li><a href="service.html" class="nav-link">業務案内</a></li>
+												<li><a href="service.html" class="nav-link">サービス</a></li>
 												<li><a href="price.html" class="nav-link">料金案内</a></li>
 												<li><a href="news.html" class="nav-link">お知らせ</a></li>
 												<li><a href="contact.html" class="nav-link">お問い合わせ</a></li>
@@ -125,43 +125,76 @@
 					<h2 class="font-weight-normal text-8 line-height-2 mb-2">個人情報保護方針</h2>
 					<h3 class="text-primary">Plivacy policy</h3>
 					<div>
-						<h5 class="mb-1">1.○○について</h5>
-						<p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+						<p>
+							さくら純税理士事務所（以下「当事務所」といいます）は、以下のとおり個人情報保護方針（以下「本ポリシー」といいます）を定めます。 <br>　
+						</p>
+						<h5 class="mb-1">第1条（個人情報） </h5>
+						<p>「個人情報」とは、個人情報保護法第2条第1項により定義された個人情報、すなわち、生存する個人に関する情報であって、
+							当該情報に含まれる氏名、生年月日その他の記述等により特定の個人を識別することができるものとします。 
 						</p>
 					</div>
 					<div>
-						<h5 class="mb-1">2.○○について</h5>
-						<p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+						<h5 class="mb-1">第2条（個人情報を収集・利用する目的） </h5>
+						<p>当事務所が個人情報を収集・利用する目的は以下のとおりです。 <br>
+							・ユーザーからのお問い合わせへの回答（本人確認を行うことを含む） <br>
+							・当事務所のサービスに関するご連絡 
 						</p>
 					</div>
 					<div>
-						<h5 class="mb-1">3.○○について</h5>
-						<p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+						<h5 class="mb-1">第3条（利用目的の変更） </h5>
+						<p>個人情報の利用目的を、関連性を有すると合理的に認められる範囲内において変更することがあり、変更した場合にはお客様に通知又は公表します。 
 						</p>
 					</div>
 					<div>
-						<h5 class="mb-1">4.○○について</h5>
-						<p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+						<h5 class="mb-1">第4条（個人情報の適正な取得） </h5>
+						<p>当事務所は、適正に個人情報を取得し、偽りその他不正の手段により取得しません。 
 						</p>
 					</div>
 					<div>
-						<h5 class="mb-1">5.○○について</h5>
-						<p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト<br>
-							ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+						<h5 class="mb-1">第5条（個人情報の安全な管理） </h5>
+						<p>当事務所では、個人情報の不当なアクセスによる紛失、破壊、改ざん、漏洩などのリスクに対して、合理的かつ厳正な安全対策を講じておりますが、
+							以下の事由など弊社の責に帰すべからざる事由を原因とする個人情報の紛失、破壊、改ざん、漏洩などに関しては、当事務所では責任を負いかねますので、ご注意ください。 <br><br>
+							（1）お客様の利用した端末から個人情報が漏れた場合またはお客様の管理化にあるパスワードの使用を原因として個人情報が漏れた場合<br>
+							（2）各種申込フォームにお客様が入力されたメールアドレスが間違っている場合
+						</p>
+					</div>
+					<div>
+						<h5 class="mb-1">第6条（個人情報の第三者提供） </h5>
+						<p>当事務所は、個人情報保護法その他の法令により許容される場合を除き、お客様の同意を得ず、利用目的の達成に必要な範囲を超えて個人情報を取り扱いません。
+							但し、次の場合はこの限りではありません。 <br><br>
+							法令に基づく場合<br>
+							（1）人の生命、身体又は財産の保護のために必要がある場合であって、お客様の同意を得ることが困難であるとき<br>
+							（2）公衆衛生の向上又は児童の健全な育成の推進のために特に必要がある場合であって、お客様の同意を得ることが困難であるとき<br>
+							（3）国の機関もしくは地方公共団体又はその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって、お客様の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがあるとき<br><br>
+							前項の定めにかかわらず、次に掲げる場合は当該情報の提供先は第三者に該当しないものとします。 <br>
+							（1）当事務所が利用目的の達成に必要な範囲内において個人情報の取扱いの全部または一部を委託する場合 <br>
+							（2）合併その他の事由による事業の承継に伴って個人情報が提供される場合<br>
+							（3）個人情報保護法の定めに基づき共同利用する場合 
+						</p>
+					</div>
+					<div>
+						<h5 class="mb-1">第7条（個人情報の開示）</h5>
+						<p>当事務所は、ご本人から個人情報の開示を求められたときは、ご本人であることを確認の上、遅滞なくこれを開示します。
+						</p>
+					</div>
+					<div>
+						<h5 class="mb-1">第8条（個人情報の訂正及び削除） </h5>
+						<p>ユーザーは、当事務所の保有する自己の個人情報が誤った情報である場合には、個人情報の訂正、追加または削除（以下「訂正等」といいます）を請求することができます。<br>
+							当事務所は、ユーザーから前項の請求を受けてその請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の訂正等を行うものとします。<br>
+							当事務所は、前項の規定に基づき訂正等を行った場合、または個人情報保護法その他の法令により訂正等を行わない旨の決定をしたときは遅滞なく、これをユーザーに通知します。
+						</p>
+					</div>
+					<div>
+						<h5 class="mb-1">第9条（継続的改善） </h5>
+						<p>当事務所は、個人情報の取り扱いに関する運用状況を適宜見直し、継続的な改善に努めるものとし、必要に応じて、プライバシーポリシーを変更することがあります。
+							本ポリシーの内容は、法令その他本ポリシーに別段の定めのある事項を除いて、ユーザーに通知することなく変更することができるものとします。<br>
+							変更後のプライバシーポリシーは、本ウェブサイトに掲載したときから効力を生じるものとします。
+						</p>
+					</div>
+					<div>
+						<h5 class="mb-1">第10条（お問い合わせ窓口）</h5>
+						<p>開示等のお申出、ご意見、ご質問、苦情、その他個人情報の取り扱いに関するお問い合わせは、下記の窓口までお願いいたします。<br>
+							メールアドレス：info@skrtax.com
 						</p>
 					</div>
 				</div>
@@ -179,26 +212,23 @@
 			</div>
 			<div class="container pt-lg-5 mt-5">
 				<div class="row">
-					<div class="col-lg-3 mb-5 mb-lg-0">
+					<div class="col-lg-3 mb-4 mb-lg-0">
 						<!-- <a href="index.html">
 							<img src="img/demos/industry-factory/logo-light.png" class="img-fluid mt-5 mb-4"
 								alt="Demo Industry & Factory" />
 						</a> -->
 						<h4 class="text-color-light font-weght-bold text-5 positive-ls-2">さくら純税理士事務所</h4>
 						<p>
-							〒123-4567<br>
-							東京都xx区xx1-2-34
+							〒135-0062<br>
+							東京都江東区東雲1-9-4-902<br>
+							税理士　山口純
 						</p>
 						<ul class="social-icons social-icons-medium">
-							<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i
-										class="fab fa-facebook-f"></i></a></li>
-							<li class="social-icons-twitter mx-2"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i
-										class="fab fa-twitter"></i></a></li>
 							<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 									title="Instagram"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-lg-4 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-4 offset-lg-1 mb-4 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">PAGE MENU</h4>
 						<div class="row">
 							<div class="col-md-6">
@@ -218,14 +248,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-3 offset-lg-1 mb-3 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">CONTACT</h4>
-						<p>TEL：000-123-4567<br>
-							MAIL：info@example.com</p>
+						<p>MAIL：info@skrtax.com</p>
 					</div>
 				</div>
 			</div>
-			<div class="footer-copyright custom-bg-lighten-grey-1 mt-5 pb-5">
+			<div class="footer-copyright custom-bg-lighten-grey-1 mt-lg-5 pb-5">
 				<div class="container custom-footer-top-light-border pt-4">
 					<div class="row">
 						<div class="col">
