--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>業務案内 | さくら純税理士事務所</title>
+	<title>サービス | さくら純税理士事務所</title>
 
 	<meta name="keywords" content="税理士事務所" />
 	<meta name="description" content="サイトの説明を書きます。">
@@ -82,7 +82,7 @@
 											<ul class="nav nav-pills" id="mainNav">
 												<li><a href="index.html" class="nav-link">Home</a></li>
 												<li><a href="introduction.html" class="nav-link">税理士紹介</a></li>
-												<li><a href="service.html" class="nav-link active">業務案内</a></li>
+												<li><a href="service.html" class="nav-link active">サービス</a></li>
 												<li><a href="price.html" class="nav-link">料金案内</a></li>
 												<li><a href="news.html" class="nav-link">お知らせ</a></li>
 												<li><a href="contact.html" class="nav-link">お問い合わせ</a></li>
@@ -108,12 +108,12 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-							<h1 class="font-weight-bold text-8 mb-0">業務案内</h1>
+							<h1 class="font-weight-bold text-8 mb-0">サービス</h1>
 						</div>
 						<div class="col-md-4 order-1 order-md-2 align-self-center">
-							<ul class="breadcrumb breadcrumb-light d-block text-md-end text-4 mb-0">
+							<ul class="breadcrumb d-block text-md-end text-4 mb-0">
 								<li><a href="index.html" class="text-decoration-none">Home</a></li>
-								<li class="active">業務案内</li>
+								<li class="active">サービス</li>
 							</ul>
 						</div>
 					</div>
@@ -121,19 +121,18 @@
 			</section>
 
 			<!-- 業務内容パターン1 -->
-			<section class="section custom-section-shape-background border-0 m-0">
+			<!-- <section class="section custom-section-shape-background border-0 m-0">
 				<div class="container position-relative z-index-3 my-5">
 					<div class="row align-items-center justify-content-center">
 						<div class="col-lg-6 pe-lg-5 mb-4 mb-lg-0">
-							<img src="img/product/product1.jpg"
-								class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInRightShorter"
-								data-appear-animation-delay="200" alt="" />
+							<img src="img/product/product1.jpg" class="img-fluid box-shadow-3 appear-animation"
+								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200" alt="" />
 						</div>
 						<div class="col-lg-6 service-contents appear-animation" data-appear-animation="fadeInRightShorter"
 							data-appear-animation-delay="500">
-							<!-- <h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">小見出しやキャッチコピーなど</h2> -->
 							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-3">個人のお客様</h3>
-							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">創業支援・税務顧問・記帳代行・確定申告代行・LINEサポートなど</p>
+							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">
+								創業支援・税務顧問・記帳代行・確定申告代行・LINEサポートなど</p>
 							<p class="mb-3">
 								個人事業主様から法人成りをご検討されている個人のお客様に至るまで業務を提供させていただきます。<br>
 								顧問契約のお客様はLINEでのサポートも可能です。<br>
@@ -154,11 +153,11 @@
 			<section class="section custom-section-shape-background custom-section-shape-background-reverse border-0 m-0">
 				<div class="container position-relative z-index-3 my-5">
 					<div class="row align-items-center justify-content-center">
-						<div class="col-lg-6 order-2 order-lg-1 service-contents appear-animation" data-appear-animation="fadeInLeftShorter"
-							data-appear-animation-delay="200">
-							<!-- <h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">小見出しやキャッチコピーなど</h2> -->
+						<div class="col-lg-6 order-2 order-lg-1 service-contents appear-animation"
+							data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
 							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-3">法人のお客様</h3>
-							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">税務顧問・記帳代行・帳簿監査・各種申告・LINEサポートなど</p>
+							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">税務顧問・記帳代行・帳簿監査・各種申告・LINEサポートなど
+							</p>
 							<p class="mb-3">
 								税務顧問契約を締結した場合、毎月の顧問報酬と決算報酬が基本となります。<br>
 								原則的にペーパーレスで、紙やハンコは使いません。契約も電子にて行います。<br>
@@ -173,9 +172,95 @@
 							</p>
 						</div>
 						<div class="col-lg-6 order-1 order-lg-2 ps-lg-5 mb-4 mb-lg-0">
-							<img src="img/product/product2.jpg"
-								class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInLeftShorter"
-								data-appear-animation-delay="500" alt="" />
+							<img src="img/product/product2.jpg" class="img-fluid box-shadow-3 appear-animation"
+								data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="500" alt="" />
+						</div>
+					</div>
+				</div>
+			</section> -->
+
+			<!-- ビジネスプラン -->
+			<section class="section bg-color-white border-0 m-0">
+				<div class="container position-relative z-index-3 my-5">
+					<div class="row align-items-center justify-content-center">
+						<div class="col-12 service-contents appear-animation" data-appear-animation="fadeInRightShorter"
+							data-appear-animation-delay="200">
+							<h2>ビジネスプラン</h2>
+							<p>
+								いつでも相談できる顧問契約のプランです。<br>
+								弥生会計またはクラウド会計ソフト（弥生会計オンライン、マネーフォワードクラウド、freee）を使用します。<br>
+								お客様には、日々の記帳から申告・納税まで極力電子で完結するようにご提案させて頂きます。<br>
+								<br>
+								原則的にペーパーレスで、紙やハンコは使いません。契約も電子にて行います。<br>
+								<br>
+								創業・設立初年度の方は、記帳代行ありのプランをお勧めしています。<br>
+								この場合、初年度は電子帳簿保存法に対応した初期設定対応を行い、毎月の作業フローや仕訳のひな形を整えます。<br>
+								２年目以降は、ご希望があれば自計化を進められるようにします。<br>
+								<br>
+								顧問契約には以下のサービスが含まれます。<br>
+								✔　税務相談（メール、LINE）<br>
+								✔　帳簿レビュー<br>
+								✔　税務関連届出書・申請書の作成および提出<br>
+								✔　所得税または法人税申告書の作成、提出<br>
+								✔　消費税申告の有利判定、申告書の作成、提出<br>
+								✔　税務署からの問い合わせ対応　<br>
+								<br>
+								♦　法人と個人で料金は異なります。<br>
+								料金は<a href="price.html">こちら</a><br>
+								<br>
+								上記以外にも、例えば次のような単発でのサービス提供も可能です。<br>
+								お客様のニーズに合わせたご提案をさせていただきますので、お気軽にお問合せください。<br>
+								✔　設立支援<br>
+								✔　法人の解散・清算対応<br>
+								✔　届出書の作成　など<br>
+								<br>
+								お問合せは<a href="contact.html">こちら</a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- パーソナルプラン -->
+			<section class="section bg-color-gray border-0 m-0">
+				<div class="container position-relative z-index-3 my-5">
+					<div class="row align-items-center justify-content-center">
+						<div class="col-12 service-contents appear-animation" data-appear-animation="fadeInLeftShorter"
+							data-appear-animation-delay="200">
+							<h2>パーソナルプラン（年１回の確定申告）</h2>
+							<p>
+								個人のお客様が、顧問契約を結ばずに年に１回確定申告（所得税・消費税）を行うプランです。<br>
+								本業に集中したい方や、確定申告の内容に不安がある方などにお勧めのプランです。
+								<br>
+								非居住者で確定申告が必要な方も対応いたします。メールでの英語対応も可能です。<br>
+								<br>
+								料金は<a href="price.html">こちら</a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- オンライン相談 -->
+			<section class="section bg-color-white border-0 m-0">
+				<div class="container position-relative z-index-3 my-5">
+					<div class="row align-items-center justify-content-center">
+						<div class="col-12 service-contents appear-animation" data-appear-animation="fadeInRightShorter"
+							data-appear-animation-delay="200">
+							<h2>オンライン相談</h2>
+							<p>
+								顧問契約を結ぶほどではないけれど、単発で税理士に相談したい方向けのサービスです。<br>
+								仕訳の相談や、節税方法について聞きたいといった内容も承っております。<br>
+								<br>
+								Teamsを使ってのオンライン相談です。<br>
+								全国対応いたします。<br>
+								<br>
+								事前にご相談内容をお送りいただきます。<br>
+								具体的なコンサルティングに関わるご相談や申告書のレビュー依頼など、内容によっては単発で対応ができない場合や、
+								別料金をご案内させていただく場合がございます。あらかじめご了承ください。<br>
+								<br>
+								現在、スポットでの相続税・贈与税についてのご相談は承っておりません。
+							</p>
 						</div>
 					</div>
 				</div>
@@ -192,26 +277,23 @@
 			</div>
 			<div class="container pt-lg-5 mt-5">
 				<div class="row">
-					<div class="col-lg-3 mb-5 mb-lg-0">
+					<div class="col-lg-3 mb-4 mb-lg-0">
 						<!-- <a href="index.html">
 							<img src="img/demos/industry-factory/logo-light.png" class="img-fluid mt-5 mb-4"
 								alt="Demo Industry & Factory" />
 						</a> -->
 						<h4 class="text-color-light font-weght-bold text-5 positive-ls-2">さくら純税理士事務所</h4>
 						<p>
-							〒123-4567<br>
-							東京都xx区xx1-2-34
+							〒135-0062<br>
+							東京都江東区東雲1-9-4-902<br>
+							税理士　山口純
 						</p>
 						<ul class="social-icons social-icons-medium">
-							<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i
-										class="fab fa-facebook-f"></i></a></li>
-							<li class="social-icons-twitter mx-2"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i
-										class="fab fa-twitter"></i></a></li>
 							<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
 									title="Instagram"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-lg-4 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-4 offset-lg-1 mb-4 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">PAGE MENU</h4>
 						<div class="row">
 							<div class="col-md-6">
@@ -231,14 +313,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 offset-lg-1 mb-5 mb-lg-0">
+					<div class="col-lg-3 offset-lg-1 mb-3 mb-lg-0">
 						<h4 class="text-color-light font-weght-bold positive-ls-2 custom-font-size-2">CONTACT</h4>
-						<p>TEL：000-123-4567<br>
-							MAIL：info@example.com</p>
+						<p>MAIL：info@skrtax.com</p>
 					</div>
 				</div>
 			</div>
-			<div class="footer-copyright custom-bg-lighten-grey-1 mt-5 pb-5">
+			<div class="footer-copyright custom-bg-lighten-grey-1 mt-lg-5 pb-5">
 				<div class="container custom-footer-top-light-border pt-4">
 					<div class="row">
 						<div class="col">
